<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pum.todolist.MainActivity"
    >
    <item
        android:id="@+id/search"
        android:orderInCategory="100"
        android:title="@string/search"
        android:icon="@drawable/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/sort"
        android:title="@string/sort"
        />
    <item
        android:id="@+id/del"
        android:title="@string/del"
        >
    <menu>
        <item android:id="@+id/del_all"
            android:title="@string/del_all" />
        <item android:id="@+id/del_checked"
            android:title="@string/del_checked"/>
    </menu>
</item>

    <item
        android:id="@+id/manage"
        android:title="@string/manage">
        <menu>
            <item
                android:id="@+id/stats"
                android:title="@string/stats"
                />
            <item
                android:id="@+id/expand_all"
                android:title="@string/expand_all"
                />
            <item
                android:id="@+id/wrap_all"
                android:title="@string/wrap_all"
                />
        </menu>
    </item>


    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        />
    <item
        android:id="@+id/about"
        android:title="@string/about"
        />
</menu>
