<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#505050">


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:text="@string/add_edit_add" />

    <TextView
        android:id="@+id/textView_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView_title"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/add_edit_title" />

    <EditText
        android:id="@+id/editText_title"
        android:layout_width="match_parent"
        android:layout_marginEnd="10dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView_header"
        android:layout_below="@+id/textView_header"
        android:layout_marginTop="10dp"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/add_edit_title_temp"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textView_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_alignStart="@+id/editText_title"
        android:layout_below="@+id/editText_title"
        android:layout_marginTop="10dp"
        android:text="@string/add_edit_desc" />

    <EditText
        android:id="@+id/editText_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView_desc"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:layout_below="@+id/textView_desc"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:text="@string/add_edit_desc_temp"
        android:layout_marginEnd="10dp"
        android:inputType="textMultiLine"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/textView_deadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText_desc"
        android:layout_below="@+id/editText_desc"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        android:text="@string/add_edit_deadline"
        />

    <Button
        android:id="@+id/editText_deadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/add_edit_deadline_button"
        android:layout_below="@+id/textView_deadline"
        android:layout_alignStart="@+id/textView_deadline"
        android:layout_marginTop="10dp"
        android:layout_alignEnd="@+id/editText_desc" />

            <TextView
                android:id="@+id/textView_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/editText_desc"
                android:layout_below="@+id/editText_deadline"
                android:textColor="@android:color/white"
                android:layout_marginTop="10dp"
                android:text="@string/add_edit_time"
                />

            <Button
                android:id="@+id/button_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/add_edit_time_button"
                android:layout_below="@+id/textView_time"
                android:layout_alignStart="@+id/textView_deadline"
                android:layout_marginTop="10dp"
                android:layout_alignEnd="@+id/editText_desc" />

    <TextView
        android:id="@+id/textView_prior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText_deadline"
        android:layout_below="@+id/button_time"
        android:layout_marginTop="10dp"
        android:text="@string/add_edit_prior"
        android:textColor="@android:color/white"
        />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView_prior"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_toStartOf="@+id/imageView_prior"
        android:backgroundTint="@android:color/holo_blue_light"
        android:foreground="@color/colorPrimary"/>

        <ImageView
            android:id="@+id/imageView_prior"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/a_letter"
            android:layout_alignTop="@+id/spinner"
            android:layout_alignEnd="@+id/editText_deadline" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_edit_cancel"
            android:layout_below="@+id/imageView_prior"
            android:layout_alignStart="@+id/spinner"
            android:layout_marginTop="15dp" />

        <Button
            android:id="@+id/button_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/button_cancel"
            android:layout_alignEnd="@+id/imageView_prior"
            android:text="@string/add_edit_apply" />

        </RelativeLayout>
</ScrollView>
</RelativeLayout>
